--- a/doc/report1/report1.tex
+++ b/doc/report1/report1.tex
@@ -18,18 +18,18 @@
 %TODO: rewrite this but you get the idea
 Although the popularity of services similar to DropBox and Google Drive proves that 
 users find such cloud storage file hosting services useful,
-currently no decentralised and distributed file system exists that could provide
+currently no decentralised and distributed filesystem exists that could provide
 a service of similar quality but without dependence on any single vendor.
-%a file system requires solving lots of problems, such as file persistence, security, 
+%a filesystem requires solving lots of problems, such as file persistence, security, 
 %good behaviour on network failure etc. Testing such an implementation is also not easy,
 %as simulating real network behaviour is hard. 
 This project attempts to implement such a system,
 and to provide a comparison to other systems with similar goals, by using common
-file system benchmarks. 
+filesystem benchmarks. 
 
-A prototype of the file system backend has been implemented, and a testing environment
+A prototype of the filesystem backend has been implemented, and a testing environment
 using LXC has been setup and evaluated to determine its suitability for testing the 
-file system service.
+filesystem service.
 
 \end{abstract}
 
@@ -41,15 +41,15 @@ Furthermore, the proposed project has the potential to offer much more free spac
 During the last 15 years, a lot of promising technology has been developed that can eliminate the providing vendors while offering the same high quality service. 
 Systems based on a Distributed Hash Table (DHT) have allowed lookup services to be implemented in a completely decentralised network, allowing any participating nodes to efficiently retrieve data. Implementations of DHTs are being successfully used in various peer-to-peer Internet services, such as BitTorrent and Coral Content Distribution Network \cite{coral}.
 
-Such technology is just as well applicable to distributed file systems. Attempts to implement such systems have been made, with the most prominent names being   CFS \cite{cfs}, Pastis \cite{pastis}, OceanStore \cite{oceanstore}, Ivy \cite{ivy}, Infinit \cite{towards}. So far no implementations are being used outside the research community by the wider public, and no large-scale high quality open source projects capable of offering such a service have been established.
+Such technology is just as well applicable to distributed filesystems. Attempts to implement such systems have been made, with the most prominent names being   CFS \cite{cfs}, Pastis \cite{pastis}, OceanStore \cite{oceanstore}, Ivy \cite{ivy}, Infinit \cite{towards}. So far no implementations are being used outside the research community by the wider public, and no large-scale high quality open source projects capable of offering such a service have been established.
 
 The purpose of this MInf dissertation is to build a Distributed Peer-to-peer File System, capable of performing similar function to the proprietary services such as DropBox \cite{dropbox}, but without depending on any specific vendor, so that the contents of the person's private folder are encrypted and then distributed among other users of the system. 
 %
-%The project consists of developing a back-end based on a peer-to-peer distributed hash table algorithm, and a front-end, which would allow users to place and retrieve files from the file system.
+%The project consists of developing a back-end based on a peer-to-peer distributed hash table algorithm, and a front-end, which would allow users to place and retrieve files from the filesystem.
 %
 %\section{Problems}
 
-%A distributed file system capable of providing a high quality service must solve a very large set 
+%A distributed filesystem capable of providing a high quality service must solve a very large set 
 %of problems:
 
 %TODO: describe some background for each of them?
@@ -63,7 +63,7 @@ The purpose of this MInf dissertation is to build a Distributed Peer-to-peer Fil
 %\end{itemize}
 
 % Project & Goals
-% Develop a P2P distributed file system 
+% Develop a P2P distributed filesystem 
 %
 % DHT - Chord
 %
@@ -89,13 +89,13 @@ The following section will present a complete view of the project, using a botto
 %
 %pastis
 
-The lowest level of the distributed file system is built on a key-based routing protocol, Chord. The purpose of this level is, given a key and a message, to route the message to the node with an identifier closest to the key. In our case, the key is the SHA-1 hash of the file path, and the identifier is the SHA-1 hash of the IP address of the node. The distance between the node's identifier and the key of the message is determined by taking the difference between them. %(talk about chord's routing algorithm like in CFS paper)
+The lowest level of the distributed filesystem is built on a key-based routing protocol, Chord. The purpose of this level is, given a key and a message, to route the message to the node with an identifier closest to the key. In our case, the key is the SHA-1 hash of the file path, and the identifier is the SHA-1 hash of the IP address of the node. The distance between the node's identifier and the key of the message is determined by taking the difference between them. %(talk about chord's routing algorithm like in CFS paper)
 
 Each node in the network is connected to a set of other nodes (its neighbours) by a number of links (the routing table).
 
 Chord can be imagined as a network of nodes connected in a ring, where each node knows its successor (the next node in clockwise direction) and its predecessor (next node in counter-clockwise direction). Consistent hashing is used to assign keys to nodes, which balances the load on the network. The value of a key-value pair is assigned to the first node that has an identifier equal to the key, or an identifier that follows the key. 
 
-Nodes maintain a routing table that accelerates lookups. In a system of $N$ nodes, a lookup can be resolved using $O(log N)$ messages to other nodes, suggesting high performance, suitable for a peer-to-peer file system \cite{chord}.
+Nodes maintain a routing table that accelerates lookups. In a system of $N$ nodes, a lookup can be resolved using $O(log N)$ messages to other nodes, suggesting high performance, suitable for a peer-to-peer filesystem \cite{chord}.
 
 
 % what are the main reasons to use chord instead of other KBRs?
@@ -107,12 +107,12 @@ Nodes maintain a routing table that accelerates lookups. In a system of $N$ node
 On top of this lowest level, sits the DHT (distributed hash table). Like a hash table, a DHT provides a mapping from keys to values. It allows inserting a value with a certain key, and allows the value to be retrieved, by providing the key that was used to insert it. The DHT operates on a network of nodes, and uses the key-based routing protocol to determine the sought node. The DHT used for this distributed filesystem will be based on CFS DHash.
 % again, why CFS DHash?
 
-In order to be suitable for usage in a distributed file system, The DHT must provide an interface supporting the following operations:
+In order to be suitable for usage in a distributed filesystem, The DHT must provide an interface supporting the following operations:
 
 \begin{itemize}
 \item insert(key, value)
 
-The DHT will use Chord to determine which node the key value pair should be stored on. To ensure file system persistence, replicas of the value will be stored on k number of nodes coming after the successor of the picked node. It should be noted that the number k has not yet been determined. 
+The DHT will use Chord to determine which node the key value pair should be stored on. To ensure filesystem persistence, replicas of the value will be stored on k number of nodes coming after the successor of the picked node. It should be noted that the number k has not yet been determined. 
 
 \item retrieve(key)
 
@@ -124,7 +124,7 @@ Deletion will be implemented simply by deleting the file path from the user's fi
 \end{itemize}
 TODO: address caching
 
-As the file system may be deployed on storage drives of varying size, including ones that provide less space than some of the files stored on the world-wide file system, the DHT will divide the files into smaller blocks suitable for storage. 
+As the filesystem may be deployed on storage drives of varying size, including ones that provide less space than some of the files stored on the world-wide filesystem, the DHT will divide the files into smaller blocks suitable for storage. 
 
 %TODO: describe how CFS does this
 
@@ -132,38 +132,37 @@ As the file system may be deployed on storage drives of varying size, including 
 
 The prototype implementation will not have a sophisticated access control system. A simple mechanism based on public key encryption and digital signatures will be provided instead. 
 
-Each user of the file system must have generated a private key, which is used to encrypt all files, and a public key.
+Each user of the filesystem must have generated a private key, which is used to encrypt all files, and a public key.
 
 % TODO: signatures
 
 \section{File System Structure}
 
-The list of files stored on the file system by the user, will be governed by an index. As in CFS, this index will be stored under the user's public key. The current plan is to maintain the index as a plain text file, although this is obviously inadequate for file systems containing large numbers of files. A more sophisticated approach, involving a database, will be presented later. 
+The list of files stored on the filesystem by the user, will be governed by an index. As in CFS, this index will be stored under the user's public key. The current plan is to maintain the index as a plain text file, although this is obviously inadequate for filesystems containing large numbers of files. A more sophisticated approach, involving a database, will be presented later. 
 
 Whenever a user creates a new file, a record of the file will be added to the index, and likewise the file's record will be deleted when the user deletes that particular file.
 
-To connect to the system, a user must first obtain an IP address of a node already in the system. The node would 
+To connect to the system, a user must first obtain an IP address of a node already in the system.
 
-The file system will be implemented in a modular way. %TODO: what do you mean
+%The filesystem will be implemented in a modular way. %TODO: what do you mean
 
 \section{Evaluation}
 
-The University of Edinburgh does not have access to PlanetLab
 The evaluation testbed and methods were chosen after a careful assessment of a number of different procedures, under the criteria that:
 \begin{enumerate}
 \item no significant differences would be required between the implementation used in the simulation, and the implementation used in the real world;
-\item the simulation would be capable of running a large amount of nodes ($>$ 2000).
-\item there would be a good basis to believe that the obtained results are applicable to the real world;
+\item the simulation would be capable of running a large amount of nodes ($>$ 2000);
+\item there would be a good basis to believe that the obtained results are applicable to the real world.
 \end{enumerate}
 
 \subsection{ns-3}
-The first method considered, was to target ns-3 for the test bed environment, as it has previously been used for this purpose when testing the Infinit file system. This method was attempted, but its main drawback is that the implementation used in simulation would differ too much from the implementation targeting the real world.
+The first method considered, was to target ns-3 for the test bed environment, as it has previously been used for this purpose when testing the Infinit filesystem. This method was attempted first, but its main drawback is that the implementation used in simulation would differ too much from the implementation targeting the real world. %This was the case for the Infinit project, as the implementation used in the simulated environment produced  
 
 % TODO: explain how ns3 could be used to do this
 
 \subsection{LXC Containers}
 
-The file system will be tested using a local emulation testbed. The testbed uses Linux Containers (LXC), a high-performance operating system level virtualization solution, that allows sharing the resources of the host machine among many isolated instances. LXC containers use the Linux kernel cgroups feature to segregate processes, isolating them from other processes, and providing them with their own network space. FUSE-based file systems can be mounted on LXC containers, but the containers can also share certain directories with the host machine.
+The filesystem will be tested using a local emulation testbed. The testbed uses Linux Containers (LXC), a high-performance operating system level virtualization solution, that allows sharing the resources of the host machine among many isolated instances. LXC containers use the Linux kernel cgroups feature to segregate processes, isolating them from other processes, and providing them with their own network space. FUSE-based filesystems can be mounted on LXC containers, but the containers can also share certain directories with the host machine.
 
 Such a testbed has previously been used for analyzing the performance of a P2P swarm \cite{p2plxc} using the hrktorrent BitTorrent client, and bttrack BitTorrent tracker. Each peer was running in its own container, on top of the hardware node, sharing parts of the system with the host, and very little decrease in download speed was noted when the number of peers was gradually increased from 20 to 100. This is surprising, as a very low-end machine was used for executing the tests (Intel(R) Core(TM)2 Duo CPU T7500 @ 2.20GHz, 1.5 GB of RAM), indicating that the LXC containers have a very low overhead, and running a large amount of nodes is possible.
 
@@ -193,9 +192,52 @@ However although ns-3 API has its own API, it was clear that such an implementat
 
 \section{Future Plans}
 
-The current goal of the project is to get the file system to a state where the ANDREW benchmark can be executed on it. At that point it will be possible to compare the speed of the file system to NFS, and this will make it clearer as to how well it scales when nodes are added/removed, and what its most significant short-comings are in regards to other similar file systems.
+The current goal of the project is to get the filesystem to a state where the ANDREW benchmark can be executed on it. At that point it will be possible to compare the speed of the filesystem to NFS, and this will make it clearer as to how well it scales when nodes are added/removed, and what its most significant short-comings are, in regards to other similar filesystems.
 
 With these taken into account, the modularity of the system will allow 
+\begin{figure}[t]
+\begin{tabular}{ | p{0.65\textwidth} | p{0.35\textwidth} | }
+\hline
+\textbf{Task} & \textbf{Dates} \\
+\hline
+Exam Period & April 8th 2013 - May 30th 2013 \\
+\hline
+Finish implementing Chord and DHash for the Twisted Python framework & June 1st 2013 - June 30th 2013 \\ 
+\hline
+\hline
+{\bf Milestone: Peer-to-peer layer finished} & 1st September 2013 \\
+\hline
+\hline
+Implement the simple security scheme on top of the DHash layer & July 1st 2013 - July 15th 2013 \\
+\hline
+Implement the FUSE interface to the filesystem. & July 16th 2013 - 15th August 2013 \\
+\hline
+Determine if there are any missing parts in the filesystem that prevent the Andrew benchmark from running, and implement them & 16th August 2013 - 30th August 2013 \\
+\hline
+\hline
+{\bf Milestone: Andrew benchmark running} & 1st September 2013 \\
+\hline
+\hline
+Compare Andrew benchmark results to other similar filesystems, determine if there are any shortcomings and devise a plan on how to overcome them & 1st September 2013 - 30th September 2013 \\
+\hline
+? & 1st October 2013 - 30th December 2013 \\
+\hline
+? & 1st January 2013 -  30th January 2013 \\
+\hline
+? & 1st February 2013 - 28th February 2013 \\
+\hline
+\hline
+{\bf Milestone: Project timetable} & 1st September 2013 \\
+\hline
+\hline
+Write dissertation & 1st February, 2013 - 3rd April 2013 \\
+\hline
+Create presentation & 4th April 2013 - 30th April 2013 \\
+\hline
+\end{tabular}
+\caption{Estimated dates for completion of project milestones.}
+\label{milestones}
+\end{figure}
 
 \section{Work Plan}
 
@@ -216,33 +258,33 @@ With these taken into account, the modularity of the system will allow
 %The current approach is to disregard all access control, and solve the issue later.
 %
 %
-%% could copying be implemented in a clever way? how do other file systems do it?
+%% could copying be implemented in a clever way? how do other filesystems do it?
 %\section{Purpose}
 %
 %The project will strive for:
 %\begin{enumerate}
 %\item simplicity, so that potential open source contributors find the project easy to grasp, thus enabling them to submit contributions;
-%\item efficiency, since users will only consider the file system useful if it offers good performance.
+%\item efficiency, since users will only consider the filesystem useful if it offers good performance.
 %\end{enumerate}
 %
 %\section{Background}
 %
 %
-%A list of decentralised peer-to-peer file systems and their drawbacks follows:
+%A list of decentralised peer-to-peer filesystems and their drawbacks follows:
 %
 %\begin{description}
 
 %\section{Methods}
 %
-%And essentially no fully decentralised file system has been adopted by the wider public. 
-%To build such a file system, a back-end and a front-end will be designed.
+%And essentially no fully decentralised filesystem has been adopted by the wider public. 
+%To build such a filesystem, a back-end and a front-end will be designed.
 %
 %The base of the back-end of such a system is a DHT (distributed hash table), capable of executing three commands among all nodes:
 %The novelty of the system lies in being able to keep more files in the cloud, than there currently is space available on your physical hard drive. 
 %
-%This will be done by maintaining a list of the most frequently or recently used files that will be cached in the system, while leaving the rest of the space (that was allocated to the file system by the user) for keeping reconds of other people's files that they stored in the cloud.
+%This will be done by maintaining a list of the most frequently or recently used files that will be cached in the system, while leaving the rest of the space (that was allocated to the filesystem by the user) for keeping reconds of other people's files that they stored in the cloud.
 %
-%This should be possible, as the encouraged behaviour for a user of such a file system, is to allocate a large amount of hard drive space to it, but it is likely that the user will only use a small amount of that space for his or her own files (which are then going to be uploaded to this 'cloud' anyway).
+%This should be possible, as the encouraged behaviour for a user of such a filesystem, is to allocate a large amount of hard drive space to it, but it is likely that the user will only use a small amount of that space for his or her own files (which are then going to be uploaded to this 'cloud' anyway).
 %
 %Describe how quorums are stored in the system,
 %
@@ -252,7 +294,7 @@ With these taken into account, the modularity of the system will allow
 %
 %Steps to editing a file:
 %\begin{enumerate}
-%\item user access a file on his/her file system
+%\item user access a file on his/her filesystem
 %\item retrieve(key) is called
 %\item user edit and saves the file
 %\item insert(key, value)
@@ -262,7 +304,7 @@ With these taken into account, the modularity of the system will allow
 %Also need to address: security, persistence (how exactly am I adding sth new to the area)
 %\begin{itemize}
 %\item The back-end will be based on a DHT (Distributed Hash Table). 
-%\item The front-end of the file system will be based on FUSE (Filesystem in Userspace) \cite{fuse}.
+%\item The front-end of the filesystem will be based on FUSE (Filesystem in Userspace) \cite{fuse}.
 %\end{itemize}
 %The implementation will target a real world workload. The ns-3 \cite{ns3} simulator will be used to test the implementation.
 %
@@ -287,20 +329,20 @@ With these taken into account, the modularity of the system will allow
 %
 %Providing an access control system is not in the scope of this project, and the task of implementing such a system is left to a higher-level application. However, an API will be provided in order to make this possible. 
 %
-%Since the contents of the files stored on the file system will be encrypted with the owner's key, this will to an extent prevent unauthorised access to users' resources.
+%Since the contents of the files stored on the filesystem will be encrypted with the owner's key, this will to an extent prevent unauthorised access to users' resources.
 %
 %\subsection{Front-end}
 %
-%The front-end of the file system will be based on FUSE, which allows implementing a file system as a user space program \cite{fuse}. This would bypass the operating system kernel, leading to greater portability, as FUSE is available for Linux, FreeBSD, NetBSD, OpenSolaris and Mac OS X. FUSE is suitable for long-term projects, as it is well-maintained, and is an official component of the Linux kernel.
+%The front-end of the filesystem will be based on FUSE, which allows implementing a filesystem as a user space program \cite{fuse}. This would bypass the operating system kernel, leading to greater portability, as FUSE is available for Linux, FreeBSD, NetBSD, OpenSolaris and Mac OS X. FUSE is suitable for long-term projects, as it is well-maintained, and is an official component of the Linux kernel.
 %
 %\section{Evaluation}
 %
-%As was mentioned, the implementation targets a real-world setup. However, due to limited resources, the simulator ns-3 \cite{ns3} will be used for specific test cases. This will allow for performing simulated experiments on systems involving a large number of nodes in order to determine how well the system scales, as well as performing real-world experiments with the intent of comparing performance to other well-established file systems.
+%As was mentioned, the implementation targets a real-world setup. However, due to limited resources, the simulator ns-3 \cite{ns3} will be used for specific test cases. This will allow for performing simulated experiments on systems involving a large number of nodes in order to determine how well the system scales, as well as performing real-world experiments with the intent of comparing performance to other well-established filesystems.
 %
 %\begin{itemize}
-%\item Well-established and commonly used benchmarks in file system evaluation are the Andrew benchmark \cite{andrew}, and the Linux kernel build \cite{kernelb}. The results obtained from running these benchmarks would be compared to results presented in other file system papers.
+%\item Well-established and commonly used benchmarks in filesystem evaluation are the Andrew benchmark \cite{andrew}, and the Linux kernel build \cite{kernelb}. The results obtained from running these benchmarks would be compared to results presented in other filesystem papers.
 %
-%\item As it is common to compare the performance of peer-to-peer file systems to the performance of NFS \cite{oceanstore} \cite{ivy} \cite{pastis}, a number of real world experiments would be structured upon simple operations executed on NFS, and a comparison would be produced.
+%\item As it is common to compare the performance of peer-to-peer filesystems to the performance of NFS \cite{oceanstore} \cite{ivy} \cite{pastis}, a number of real world experiments would be structured upon simple operations executed on NFS, and a comparison would be produced.
 %\end{itemize}
 %
 %\section{Outputs}
@@ -344,7 +386,7 @@ J. Kubiatowicz, D. Bindel, Y. Chen, S. Czerwinski, P. Eaton, D. Geels, R. Gummad
 H. Weatherspoon, W. Weimer, C. Wells, and B. Zhao. Oceanstore: An architecture for globalscale persistent store. In Proc. ASPLOS’2000, Cambridge, MA, November 2000.
 \bibitem{ivy}
 A. Muthitacharoen, R. Morris, T. Gil, and B. Chen. 
-Ivy: A read/write peer-to-peer file system. 
+Ivy: A read/write peer-to-peer filesystem. 
 In Proc. of OSDI, 2002.
 \bibitem{towards}
 J. Quintard. Towards a worldwide storage infrastructure.
@@ -368,7 +410,7 @@ A. Traeger, N. Joukov, C. P. Wright, and E. Zadok. A
 Nine Year Study of File System and Storage Benchmarking. ACM Transactions on Storage (TOS), 4(2):25–80,
 May 2008.
 \bibitem{pastis}
-Busca, J. M., Picconi, F., \& Sens, P. (2005). Pastis: A highly-scalable multi-user peer-to-peer file system. Euro-Par 2005 Parallel Processing, 644-644.
+Busca, J. M., Picconi, F., \& Sens, P. (2005). Pastis: A highly-scalable multi-user peer-to-peer filesystem. Euro-Par 2005 Parallel Processing, 644-644.
 \bibitem{gpl}
 GNU General Public License. http://www.gnu.org/licenses/gpl.html
 \bibitem{github}
